adding vite, adding timline

--- a/src/sass/mapping-tool.scss
+++ b/src/sass/mapping-tool.scss
@@ -533,3 +533,4 @@ button.map-sidebar-button:where(:hover, :focus, :active) {
 
 @import "sheet-entries-list";
 @import "sheet-overview";
+@import "timeline";
